# glassbead

./: .gitignore  glassbead.pde  recogn.pde
GettingStartedCapture/: GettingStartedCapture.pde
build-tmp/source/: glassbead.java
cpp/: CMakeLists.txt  Makefile  camtest.c  go  go.c  go.cpp  go_capture.cpp  go_funcs.cpp  heuristics.cpp  hough.cpp  old_Makefile  videowrite.c
glassbead/: glassbead.pde
sketch_150725a/: sketch_150725a.pde
test/: test.pde
